feat: add OpenAPI generation flow (#108)
